Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Area_Plantada__c.field-meta.xml
<CustomField>
    <fullName>Area_Plantada__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Algunas veces la cantidad de hectares qué autorizamos para nuestros clientes, ellos sembra menos. Por ejemplo, la Brasmax autoriza 100 hectares para sembrar, pero lo cliente sembra solamente 50 ha. Entonces, ese campo es “Ha Plantado”.</description>
    <inlineHelpText>Algunas veces la cantidad de hectares qué autorizamos para nuestros clientes, ellos sembra menos. Por ejemplo, la Brasmax autoriza 100 hectares para sembrar, pero lo cliente sembra solamente 50 ha. Entonces, ese campo es “Ha Plantado”.</inlineHelpText>
    <label>Ha. Plantados</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>