Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/AUFNR__c.field-meta.xml
<CustomField>
    <fullName>AUFNR__c</fullName>
    <description>Centro de CO - Orden VTA</description>
    <label>_AUFNR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>