Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Autori__c.field-meta.xml
<CustomField>
    <fullName>Autori__c</fullName>
    <label>Autorização</label>
    <length>115</length>
    <type>Text</type>
</CustomField>