Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Autorizacion_V_Industria__c.field-meta.xml
<CustomField>
    <fullName>Autorizacion_V_Industria__c</fullName>
    <label>Aut. Descarte de Semente</label>
    <length>10</length>
    <type>Text</type>
</CustomField>