Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Aux_Calculos__c.field-meta.xml
<CustomField>
    <fullName>Aux_Calculos__c</fullName>
    <description>Se utiliza para fórmulas en informes</description>
    <formula>IF( OR( Opportunity.RecordType.Id = &apos;01240000000M8J1&apos;,Opportunity.RecordType.Id = &apos;01240000000M8Iw&apos;), -1* Quantity, Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aux Calculos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>