Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Base_de_Calculo__c.field-meta.xml
<CustomField>
    <fullName>Base_de_Calculo__c</fullName>
    <label>Base de Calculo</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>