Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Bls_devolucion__c.field-meta.xml
<CustomField>
    <fullName>Bls_devolucion__c</fullName>
    <label>Bls devolucion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>