Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Bonificacion_Distribuidor__c.field-meta.xml
<CustomField>
    <fullName>Bonificacion_Distribuidor__c</fullName>
    <description>Campo creado para tener compatibilidad con Argentina en las interfaces SAP SF</description>
    <label>Bonificacion Distribuidor</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>