Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Cantidad_autorizada_vi__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_autorizada_vi__c</fullName>
    <description>Cantidad autorizada para la venta a industria.</description>
    <label>Qtde. Aut. Sem. Bruta (sacas)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>