Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Categoria_Prod__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Prod__c</fullName>
    <formula>PricebookEntry.Product2.Categ__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria</label>
    <type>Text</type>
</CustomField>