Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cidade</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Producto de oportunidad</relationshipLabel>
    <relationshipName>R00N40000001mUVBEA2</relationshipName>
    <type>Lookup</type>
</CustomField>