Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Classes_de_Bonificacao__c.field-meta.xml
<CustomField>
    <fullName>Classes_de_Bonificacao__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Variedade__r.Classes_de_Bonificacao__c)</formula>
    <label>Classes da P. de Bonif.</label>
    <type>Text</type>
</CustomField>