Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Compras_Entrada_de_Mercaderia__c.field-meta.xml
<CustomField>
    <fullName>Compras_Entrada_de_Mercaderia__c</fullName>
    <description>Oferta VS Demanda. Se carga el campo Compras Entrada de Mercaderia q viene del WS de oferta de PI.</description>
    <label>Compras Entrada de Mercaderia</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>