Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Contrato_Cotizacion_Soja__c.field-meta.xml
<CustomField>
    <fullName>Contrato_Cotizacion_Soja__c</fullName>
    <formula>TEXT(Contrato_relacionado__r.Cotacao_de_soja__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contrato Cotizacion Soja</label>
    <type>Text</type>
</CustomField>