Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Contrato_Tipo_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Contrato_Tipo_Cotizacion__c</fullName>
    <formula>TEXT(Contrato_relacionado__r.Tipo_de_Cota_o__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contrato Tipo Cotizacion</label>
    <type>Text</type>
</CustomField>