Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Cot_Soja__c.field-meta.xml
<CustomField>
    <fullName>Cot_Soja__c</fullName>
    <label>Cot. Soja</label>
    <length>50</length>
    <type>Text</type>
</CustomField>