Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Data</label>
    <type>Date</type>
</CustomField>