Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Descarte__c.field-meta.xml
<CustomField>
    <fullName>Descarte__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Descarte(Sacas)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>