Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Descarte_Anexo_II__c.field-meta.xml
<CustomField>
    <fullName>Descarte_Anexo_II__c</fullName>
    <formula>IF(Opportunity.RecordTypeId = &apos;01240000000M7M0&apos;, Descarte__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descarte Anexo II</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>