Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Desconto_diferencial__c.field-meta.xml
<CustomField>
    <fullName>Desconto_diferencial__c</fullName>
    <label>Desconto diferencial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>