Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Descuento_Adicional__c.field-meta.xml
<CustomField>
    <fullName>Descuento_Adicional__c</fullName>
    <label>Descuento Adicional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>