Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Despacho__c.field-meta.xml
<CustomField>
    <fullName>Despacho__c</fullName>
    <description>Oferta VS Demanda. Se carga el campo ZR_PLDESP q viene del WS de oferta de PI.</description>
    <label>Despacho</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>