Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Embalagem__c.field-meta.xml
<CustomField>
    <fullName>Embalagem__c</fullName>
    <label>Embalagem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Embalagems</valueSetName>
    </valueSet>
</CustomField>