Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Es_Previsao__c.field-meta.xml
<CustomField>
    <fullName>Es_Previsao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Previsao</label>
    <type>Checkbox</type>
</CustomField>