Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estado</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Producto de oportunidad (Estado)</relationshipLabel>
    <relationshipName>Producto_de_oportunidad2</relationshipName>
    <type>Lookup</type>
</CustomField>