Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Estado_de_Comercializacion__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Comercializacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estado de Comercialização</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Producto de oportunidad (Estado de Cermercializacion)</relationshipLabel>
    <relationshipName>Producto_de_oportunidad1</relationshipName>
    <type>Lookup</type>
</CustomField>