Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Estado_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Estado_Facturacion__c</fullName>
    <label>Estado Facturacion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facturado</fullName>
            </value>
            <value>
                <fullName>No facturado</fullName>
                <default>true</default>
                <label>No facturado</label>
            </value>
            <value>
                <fullName>Pasado Pedido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>