Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Estim_Sem_Comerc__c.field-meta.xml
<CustomField>
    <fullName>Estim_Sem_Comerc__c</fullName>
    <description>Cantidad de bolsas comercializadas estimadas para el circuito de control de stock</description>
    <label>Estim. Sem. Comerc.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>