Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Estim_Sem_Estoque__c.field-meta.xml
<CustomField>
    <fullName>Estim_Sem_Estoque__c</fullName>
    <formula>IF(Opportunity.RecordTypeId = &apos;01240000000M7y6&apos;,  Semente_bruta__c , Estim_Sem_Previsao__c - Estim_Sem_Comerc__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estim. Sem. Estoque</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>