Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Estimativa__c.field-meta.xml
<CustomField>
    <fullName>Estimativa__c</fullName>
    <description>Oferta VS Demanda. Se carga el campo ZR_PLEMVA q viene del WS de oferta de PI.</description>
    <label>Estimativa</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>