Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Estoque_Sacas__c.field-meta.xml
<CustomField>
    <fullName>Estoque_Sacas__c</fullName>
    <description>Oferta VS Demanda. Se carga el campo Estoque Sacas q viene del WS de oferta de PI.</description>
    <label>Estoque Sacas</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>