Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Fecha_fijacion_T_de_cambio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_fijacion_T_de_cambio__c</fullName>
    <label>Fecha fijacion de cambio</label>
    <type>Date</type>
</CustomField>