Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Grupo_de_materiales_2__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_materiales_2__c</fullName>
    <description>Calibre de la Semilla</description>
    <label>Peneira</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>