Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Id_de_Item_de_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Id_de_Item_de_Oportunidad__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id de Item de Oportunidad</label>
    <type>Text</type>
</CustomField>