Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Id_Producto__c.field-meta.xml
<CustomField>
    <fullName>Id_Producto__c</fullName>
    <formula>CASESAFEID(PricebookEntry.Product2Id)</formula>
    <label>Id Producto</label>
    <type>Text</type>
</CustomField>