Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Kg_de_produto__c.field-meta.xml
<CustomField>
    <fullName>Kg_de_produto__c</fullName>
    <formula>Quantity * VALUE(PricebookEntry.Product2.CANTIDAD_SUB_UNIDAD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kg de produto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>