Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/KWMENG__c.field-meta.xml
<CustomField>
    <fullName>KWMENG__c</fullName>
    <description>Cantidad de pedido</description>
    <label>_KWMENG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>