Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Local_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Local_de_Entrega__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local de Entrega</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Producto de oportunidad</relationshipLabel>
    <relationshipName>Producto_de_oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>