Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Meta_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Meta_Contrato__c</fullName>
    <formula>IF(Opportunity.RecordTypeId = &apos;012330000009mqZ&apos;,  Meta__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meta contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>