Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Meta_interna__c.field-meta.xml
<CustomField>
    <fullName>Meta_interna__c</fullName>
    <formula>IF(Opportunity.RecordTypeId = &apos;01233000000MI7B&apos;,  Meta__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meta interna</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>