Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rendimento</fullName>
            </value>
            <value>
                <fullName>Adaptação</fullName>
            </value>
            <value>
                <fullName>Sanidade</fullName>
            </value>
            <value>
                <fullName>Mercado</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>