Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Motivo_de_Rechazo__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Rechazo__c</fullName>
    <label>Motivo Rechazo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Z1 - Troca de produto SF</fullName>
            </value>
            <value>
                <fullName>Z2 - Pedido recusado em Salesforce</fullName>
            </value>
            <value>
                <fullName>Z4 - Pedido em duplicidade</fullName>
            </value>
            <value>
                <fullName>Z6 - BR - Bloqueio – Produção</fullName>
            </value>
            <value>
                <fullName>Z7 - Bloqueio Comercial</fullName>
            </value>
            <value>
                <fullName>Z8 - Avaria no carregamento</fullName>
            </value>
            <value>
                <fullName>Z9 - Avaria no transporte</fullName>
            </value>
            <value>
                <fullName>ZA - Pedido incorreto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>