Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/MVGR1__c.field-meta.xml
<CustomField>
    <fullName>MVGR1__c</fullName>
    <description>Grupo de Materiales - Calibre</description>
    <label>_MVGR1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>