Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Observaciones_Tasas__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Tasas__c</fullName>
    <label>Observaciones Tasas</label>
    <length>120</length>
    <type>Text</type>
</CustomField>