Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/PB_Comercial__c.field-meta.xml
<CustomField>
    <fullName>PB_Comercial__c</fullName>
    <description>Indica si se trata de una oportunidad de Producción de Básica Comercial. Necesario para poder completar un reporte.</description>
    <formula>IF( NOT(ISNULL(Quantidade__c)), IF(Opportunity.RecordTypeId = &apos;01240000000MAR3&apos;, -1 * Quantidade__c, Quantidade__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PB_Comercial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>