Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Posicion_Relativa_Consign__c.field-meta.xml
<CustomField>
    <fullName>Posicion_Relativa_Consign__c</fullName>
    <label>Posicion SAP</label>
    <length>8</length>
    <type>Text</type>
</CustomField>