Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Posicion_SAP_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Posicion_SAP_Relacionada__c</fullName>
    <label>Posicion SAP Relacionada</label>
    <length>8</length>
    <type>Text</type>
</CustomField>