Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Precio_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Precio_Contrato__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Preço Contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>