Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Precio_Liquido__c.field-meta.xml
<CustomField>
    <fullName>Precio_Liquido__c</fullName>
    <formula>IF(Opportunity.CloseDate &lt; DATE(2015, 11, 25),
(ROUND(
IF(AND(ISBLANK(Base_de_Calculo__c),ISBLANK(Tasas__c)), UnitPrice ,IF( ISBLANK(Base_de_Calculo__c),UnitPrice * (1- IF( ISBLANK(Tasas__c), 0, Tasas__c/100)),(UnitPrice * (1- IF( ISBLANK(Tasas__c), 0, Tasas__c/100)) +(UnitPrice * IF( ISBLANK(Tasas__c), 0, Tasas__c/100) * (1 - Base_de_Calculo__c/100 ))))) * VALUE(PricebookEntry.Product2.CANTIDAD_SUB_UNIDAD__c)
,2))
,
(
IF(AND(ISBLANK(Base_de_Calculo__c),ISBLANK(Tasas__c)), UnitPrice ,IF( ISBLANK(Base_de_Calculo__c),UnitPrice * (1- IF( ISBLANK(Tasas__c), 0, Tasas__c/100)),(UnitPrice * (1- IF( ISBLANK(Tasas__c), 0, Tasas__c/100)) +(UnitPrice * IF( ISBLANK(Tasas__c), 0, Tasas__c/100) * (1 - Base_de_Calculo__c/100 ))))) * VALUE(PricebookEntry.Product2.CANTIDAD_SUB_UNIDAD__c)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Liquido</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>