Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/PRECIO_NETO__c.field-meta.xml
<CustomField>
    <fullName>PRECIO_NETO__c</fullName>
    <description>Campo creado para tener compatibilidad con Argentina en las interfaces SAP SF</description>
    <label>PRECIO_NETO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>