Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Precio_SAP__c.field-meta.xml
<CustomField>
    <fullName>Precio_SAP__c</fullName>
    <description>Precio para pedidos de royaltys tipo ZPRE. Este es el precio descontandole las tasas y es el precio que pasa a SAP.</description>
    <label>Precio SAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>