Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Precio_SAP_Estimado__c.field-meta.xml
<CustomField>
    <fullName>Precio_SAP_Estimado__c</fullName>
    <formula>IF(Opportunity.CloseDate &lt; DATE(2015, 11, 24),
(ROUND(ROUND((UnitPrice * Tipo_de_cambio__c),2) - (ROUND((UnitPrice * Tipo_de_cambio__c),2) * (Tasas__c * IF( ISPICKVAL(Opportunity.Account.Grupo_de_Cuentas__c, &apos;CMEX&apos;) , 0, 1)) / 100),2))
,
(UnitPrice * Tipo_de_cambio__c - (UnitPrice * Tipo_de_cambio__c * (Tasas__c * IF( ISPICKVAL(Opportunity.Account.Grupo_de_Cuentas__c, &apos;CMEX&apos;) , 0, 1)) / 100))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Liquido SAP</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>