Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Precio_Total_Aux__c.field-meta.xml
<CustomField>
    <fullName>Precio_Total_Aux__c</fullName>
    <description>Se copia en este campo el valor de Preço Total mediante una regla de flujo. Es para poder usar un campo resumen en la cabecera.</description>
    <label>Preço Total Aux</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>