Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Previsao__c.field-meta.xml
<CustomField>
    <fullName>Previsao__c</fullName>
    <label>Previsão</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>