Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Producto_de_requisicion__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_requisicion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto de requisicion</label>
    <referenceTo>Produto_de_Requisicao__c</referenceTo>
    <relationshipLabel>Producto de oportunidad</relationshipLabel>
    <relationshipName>Producto_de_oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>