Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Produto_Rebaixado__c.field-meta.xml
<CustomField>
    <fullName>Produto_Rebaixado__c</fullName>
    <description>Id del OpportunityLineItem de la oportunidad original que fue rebajada</description>
    <label>Produto Rebaixado</label>
    <length>18</length>
    <type>Text</type>
</CustomField>