Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Produto_Rebaixado_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Produto_Rebaixado_Nombre__c</fullName>
    <label>Produto Rebaixado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>