Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Qtde_Facturada__c.field-meta.xml
<CustomField>
    <fullName>Qtde_Facturada__c</fullName>
    <formula>IF(AND(OR(Opportunity.RecordTypeId=&apos;012400000000zQt&apos;,Opportunity.RecordTypeId=&apos;0124000000010pm&apos;),NOT( ISPICKVAL(Opportunity.Estado_Facturacion__c, &quot;Anulada&quot;))),Quantity,0)</formula>
    <label>Qtde.Facturada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>