Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Qtde_Sacas__c.field-meta.xml
<CustomField>
    <fullName>Qtde_Sacas__c</fullName>
    <description>Valor creado para usar en los informes - Tipos de Registros Pendientes y Autorizadas.</description>
    <formula>CASE( Opportunity.RecordTypeId, 
&quot;0124000000010P5&quot;, Semente_aprovada__c, 
&quot;012400000009d91&quot;, Semente_comercializada__c + Semente_uso_propio__c, 
&quot;01240000000M58N&quot;, Quantidade_Facturada__c, 
&quot;01240000000M58I&quot;, Quantidade_Facturada__c, 
&quot;012400000009d9B&quot;, Semente_aprovada__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qtde. Sacas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>