Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Qtde_Scs_40kg__c.field-meta.xml
<CustomField>
    <fullName>Qtde_Scs_40kg__c</fullName>
    <label>Qtde Scs (40kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>