Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Quant_Pendiente__c.field-meta.xml
<CustomField>
    <fullName>Quant_Pendiente__c</fullName>
    <description>Cantidad que resta bajar a SAP.</description>
    <formula>Quantity - Quant_Confirmada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quant. Pendiente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>