Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Quant_Sacas_40_Kg__c.field-meta.xml
<CustomField>
    <fullName>Quant_Sacas_40_Kg__c</fullName>
    <formula>Quantity * VALUE(PricebookEntry.Product2.CANTIDAD_SUB_UNIDAD__c) / 40</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quant. Sacas (40 Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>