Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantidade</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>