Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Quantidade_CE__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_CE__c</fullName>
    <label>Quantidade CE</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>