Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Quantidade_de_sementes__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_sementes__c</fullName>
    <label>Quantidade de sementes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>