Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Quantidade_Difusion__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Difusion__c</fullName>
    <label>Difusão Comercial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>