Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Quantidade_R1__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_R1__c</fullName>
    <label>Quantidade R1</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>