Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Quantidade_Sacas__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Sacas__c</fullName>
    <description>Valor creado para usar en los informes</description>
    <formula>CASE( Opportunity.RecordTypeId,
   &quot;0124000000010P5&quot;, Semente_aprovada__c,
   &quot;012400000009d91&quot;,  Semente_comercializada__c +  Semente_uso_propio__c,
   &quot;0124000000010pm&quot;,  Qtde_Facturada__c, 
   0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor creado para usar en los informes</inlineHelpText>
    <label>Quantidade Sacas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>