Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Rebaja__c.field-meta.xml
<CustomField>
    <fullName>Rebaja__c</fullName>
    <label>Rebaixa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>S1</fullName>
            </value>
            <value>
                <fullName>S2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>