Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Rechazado__c.field-meta.xml
<CustomField>
    <fullName>Rechazado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rechazado</label>
    <type>Checkbox</type>
</CustomField>