Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Sacas_Difusao_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Sacas_Difusao_Comercial__c</fullName>
    <formula>Quantidade_Difusion__c + CASE(Tipo_de_Necesidad__c,&quot;Difusão Comercial&quot;,Quantity,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sacas Difusão Comercial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>